# uav_ros_general

./: .gitignore  CMakeLists.txt  MAP_PROCESSING.md  OPTITRACK.md  README.md  package.xml
.ci/: ci_before_install.sh
.github/workflows/: melodic.yml  noetic.yml
cartographer_config/: assets_writer.lua  cartographer_experimental.lua  pure_localization_1200_rpm.lua  second_tuning.lua  second_tuning_new_params.lua  second_tuning_sim.lua
config/: KalmanConstAccParameters.cfg  VLP16db.yaml  VelocityEstimationParameters.cfg  apm_config.yaml  cartographer_experimental.lua  pure_localization_1200_rpm.lua  second_tuning.lua  second_tuning_new_params.lua  second_tuning_no_gps.lua  second_tuning_sim.lua  velocity_estimation_parameters.yaml  velocity_estimation_parameters_acc.yaml  velocity_estimation_parameters_acc_ukf.yaml  vision_pose_config.yaml  vlp16-imu.lua  waypoints.yaml
include/erl_drone/: ConstVelKF.h
include/uav_ros_general/: ConstAccKF.h  RcOverride.hpp  RcToJoy.hpp  kf_base.h
launch/: aloam.launch  aloam_offline.launch  apm2.launch  asset_writer.launch  assets_writer.launch  cameras.launch  cartographer.launch  futaba_to_joy.launch  lpms_imu.launch  mavros_node.launch  mavsys.launch  multimaster.launch  offline_slam.launch  optitrack.launch  ouster.launch  pose_transform.launch  pose_transform_octo.launch  pure_localization.launch  px4.launch  px4_optitrack_params.launch  rc_override.launch  robot_state_publisher.launch  rviz_to_global.launch  set_rates.launch  slam.launch  slam_sim.launch  slam_starter.launch  slam_with_starter.launch  uav_joy_global_reference.launch  velocity_estimation.launch  velocity_estimation_acc.launch  velocity_estimation_acc_ukf.launch  velodyne.launch  vision_pose_publisher.launch  waypoint_control.launch
nodes/: VelocityEstimationNode.cpp  VelocityEstimationNode_ConstAccUKF.cpp  rc_override_node.cpp  rc_to_joy_node.cpp  tf2TransformStamped.cpp
rviz/: erl_drone.rviz
scripts/: aloam_pose.py  ecef_to_lla.py  goal2pose.py  joy_global_reference.py  mavsys_script.sh  ouster_dns.sh  ouster_time_sync.sh  restart_pixhawk.sh  shell_scripts.sh  step_sequence.sh  transform_optitrack.py  wp_publisher.py
scripts/startup_aloam/: aloam_helix_session.yml  sim_session_no_slam.yml
scripts/startup_carto/: carto_helix_session.yml  cartographer_paper_session.yml  start.sh
src/: RcOverride.cpp  RcToJoy.cpp  VelocityEstimationNode.cpp  VelocityEstimationNode_ConstAcc.cpp  frame_to_pose.py  global2pose.py  helix_trajectory.py  home_position_init.py  pose2global.py  pose_from_tf.py  step_publisher.py  transform_cloud.py  vision_pose_publisher.py
startup/hawk_px4_mocap/: session.yml
startup/hawk_px4_mocap/custom_config/: position_control_mocap.yaml  vision_pose_config.yaml
startup/kopterworx_aloam/: aloam_helix_session.yml  start.sh
startup/kopterworx_cartographer/: carto_helix_session.yml  cartographer_paper_session.yml
startup/kopterworx_default/: session.yml
startup/kopterworx_exploration/: exploration_session.yml  start.sh
startup/kopterworx_with_ouster/: session.yml
startup/kopterworx_with_ouster/kopterworx_exploration/: session.yml
urdf/: ouster-imu.urdf.xacro
