<package>
  <name>uav_ros_general</name>
  <version>0.0.1</version>
  <description>
    General launch files and configuration for "uav_ros_stack" package 
  </description>
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>
  <author>Lovro Markovic</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mavros_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>uav_ros_lib</build_depend>

  <run_depend>mavros_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>uav_ros_lib</run_depend>

</package>


